# discord-bot-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: voice.rs
src/common/: mod.rs  utils.rs
